--- a/www/css/main.css
+++ b/www/css/main.css
@@ -56,6 +56,13 @@ body {
   font-weight: 400;
   background-color: #212121;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll;
+}
+body::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
 
 #hero {
@@ -3604,7 +3611,29 @@ img {vertical-align: middle;}
   position: absolute;
   right: -120px;
 }
+.marketCoin24Change {
+  position: absolute;
+  right: -120px;
+  top: -27px;
+  display: flex;
+  background-image: linear-gradient(90deg, #647dee 0%, #a754e2 100%);
+  border-radius: 7px;
+  padding: 0 3px;
+  border: 1px solid transparent;
+}
 
+.material-symbols-outlined {
+  font-variation-settings:
+          'FILL' 0,
+          'wght' 400,
+          'GRAD' 0,
+          'opsz' 48
+}
+
+.material-symbols-outlined {
+  font-size: 20px;
+  margin-right: 5px;
+}
 
 
 
